force-app/main/default/objects/SCC_Call_Type_Feature__c/SCC_Call_Type_Feature__c.object-meta.xml
<CustomObject>
    <label>Case Type Feature</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Case Type Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Type Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>