force-app/main/default/objects/SCC_Call_Type_Feature__c/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Type</label>
    <referenceTo>SSC_Call_Type__c</referenceTo>
    <relationshipLabel>Call Type Features</relationshipLabel>
    <relationshipName>Call_Type_Feature</relationshipName>
    <type>Lookup</type>
</CustomField>