force-app/main/default/objects/SCC_Call_Type_Feature__c/fields/Fitur_ID__c.field-meta.xml
<CustomField>
    <fullName>Fitur_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fitur ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>