force-app/main/default/objects/SCC_Call_Type_Feature__c/fields/SCC_Fitur_Detail__c.field-meta.xml
<CustomField>
    <fullName>SCC_Fitur_Detail__c</fullName>
    <formula>Fitur_ID__c &amp; &apos; - &apos; &amp;  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fitur Detail</label>
    <type>Text</type>
</CustomField>