force-app/main/default/objects/SCC_Call_Type_Feature__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>test</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>